fixed title line height and it's margin top to be aligned more into center

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,8 +47,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Fraunces';
   font-weight: 900;
-
-  line-height: 1;
 }
 
 button {
@@ -66,7 +64,7 @@ button {
   overflow-x: hidden;
 
   position: relative;
-  min-height: 100vh;
+  height: 100vh;
 }
 /* Navigation Section */
 .hero__logo--container {
@@ -138,7 +136,8 @@ button {
 
   text-transform: uppercase;
   text-align: center;
-  margin: 6rem auto;
+
+  margin-top: 15vh;
 }
 
 .hero__arrow--container {
